--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
 
     <div class="copyright prevent-select">
-      <p data-aos="zoom-out-down" data-aos-delay="100" data-aos-once="false">Made by</span> Gagan Arora. All rights reserved.</p>
+      <p data-aos="zoom-out-down" data-aos-delay="100" data-aos-once="true">Made by</span> Gagan Arora. All rights reserved.</p>
     </div>
   </body>
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
