Redirect portfolio link

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="card" data-aos="slide-left" data-aos-delay="100" data-aos-once="false">
         <h2 data-aos="slide-right" data-aos-delay="800" data-aos-once="false">Contact Form</h2>
         <p data-aos="fade-in" data-aos-delay="800" data-aos-once="false">Fill out the contact form to get in touch.</p>
-        <a href="https://gagan.click/#Contact" target="_blank"><button class="form-btn rounded-button" data-aos="slide-left" data-aos-delay="800" data-aos-once="false">Contact Form</button></a>
+        <a href="https://gagan-redirect.netlify.app/" target="_blank"><button class="form-btn rounded-button" data-aos="slide-left" data-aos-delay="800" data-aos-once="false">Contact Form</button></a>
       </div>
       <div class="card" data-aos="slide-left" data-aos-delay="100" data-aos-once="false">
         <h2 data-aos="slide-right" data-aos-delay="800" data-aos-once="false">Email</h2>
